# ABV-Programmieren-f-r-WiWiss---Maxim-Terekhov

./: README.md  app.py  pyproject.toml
backend/: main.py
