[project]
name = "buchungssystem-wiwiss"
version = "0.1.0"
description = "Semesterprojekt ABV Programmieren für WiWiss"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "streamlit>=1.35.0",
    "pandas>=2.2.2",
    "matplotlib>=3.9.0",
    "pydantic>=2.7.0",
    "sqlalchemy>=2.0.30",
    "requests>=2.32.0"
]
